# pytorch-ultimate

./: .gitignore  pyproject.toml  pytorch-ultimate.code-workspace  pytorch.yml
010_DeepLearningIntro/: PROMPT for NotebookLM for the Spotify Podcast.MD  episode 001 prompt.MD
010_DeepLearningIntro/10_DNN_Overview/: 0_DeepLearningOverview.MD  DeepLearningOverview.MD
010_DeepLearningIntro/15_DNN_Details/: 2_DeepLearning_PerceptronNeuralNetwork.MD  2_PerceptronNeuralNetwork.MD  3_DeepLearning_LayerTypes.MD  4_DeepLearning_ActivationFunctions.MD  5_DeepLearning_LossFunctions.MD  6_DeepLearning_Optimizer.MD  7_DeepLearning_Frameworks.MD  8_DeepLearning_EpochBatchsize.md  DeepLearningPerformance.MD
015_NeuralNetworkFromScratch/: 2_Neural Network from Scratch.MD
016_ModelEvaluation/: 1_Model Evaluation.MD  Model Evaluation.MD
020_TensorIntro/: 1_Tensor-Intro.MD  Tensors.py
030_ModelingIntroduction/: 00_LinRegFromScratch_end.py  00_PyTorch Modeling Introduction.MD  00_PyTorch-Modelling-Intro.MD
800_Podcast/002 The Evaluation Mystery - When Good Neural Networks Go Bad/: episode 002 prompt.MD
