[tool.poetry]
name = "pytorch-ultimate"
version = "0.1.0"
description = "PyTorch Ultimate 2024 - From Basics to Cutting-Edge"
authors = ["Px8 Studio info@px8.studio"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.12.1"
torchvision = "^0.13.0"
torchaudio = "^0.12.1"
matplotlib = "^3.5.0"
seaborn = "^0.11.2"
scikit-learn = "^1.0.2"
pandas = "^1.4.2"
numpy = "^1.21.5"
jupyter = "^1.0.0"
ipykernel = "^6.15.1"
requests = "^2.28.0"
transformers = "^4.22.0"
opencv-python = "^4.6.0"
pillow = "^9.0.1"
tqdm = "^4.64.0"

[tool.poetry.group.dev.dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
pytest = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
